--- a/04_bootstrap/task4/index.html
+++ b/04_bootstrap/task4/index.html
@@ -10,23 +10,38 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mb-3">
             <div class="col">
-                <div class="">1</div>
+                <div class="h-100 p-2">1</div>
             </div>
             <div class="col">
-                <div>2</div>
+                <div class="h-100 p-2">2</div>
             </div>
             <div class="col">
-                <div>3</div>
+                <div class="h-100 p-2">3</div>
             </div>
             <div class="col">
                 <div class="p-2 mb-3">4</div>
-                <div class="p-2">5</div>
+                <div class="p-2 mb-4">5</div>
             </div>
-            
-
         </div>
+
+        <div class="row mb-3">
+            <div class="col-6">
+                <div class="p-2">6</div>
+            </div>
+            <div class="col-6">
+                <div class="p-2">7</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="p-2">8</div>
+            </div>
+        </div>
+
+
     </div>
 
 
