--- a/04_bootstrap/task4/index.html
+++ b/04_bootstrap/task4/index.html
@@ -37,13 +37,43 @@
 
         <div class="row">
             <div class="col">
-                <div class="p-2">8</div>
+                <div class="pb-5 p-2">8</div>
             </div>
         </div>
 
 
     </div>
 
+
+    <br><br> <!-- drugi nacin, ali i dalje ne razumem resenje-->
+
+    <div class="container-fluid">
+        <div class="row gy-3">
+            <div class="col-3 backgr">
+                <div class="paddingbt">1</div>
+            </div>
+            <div class="col-3">
+                <div class="paddingbt">2</div>
+            </div>
+            <div class="col-3 backgr">
+                <div class="paddingbt">3</div>
+            </div>
+            <div class="col-3">
+                <div class="p-2 mb-3">4</div>
+                <div class="p-2 mb-3">5</div>
+            </div>
+            <div class="col-6">
+                <div class="p-2">6</div>
+            </div>
+            <div class="col-6">
+                <div class="p-2">7</div>
+            </div>
+            <div class="col">
+                <div class="paddingbt">8</div>
+            </div>
+        </div>
+
+    </div>
 
 
 
