--- a/04_bootstrap/task6/index.html
+++ b/04_bootstrap/task6/index.html
@@ -55,7 +55,7 @@
         </div>
         
 
-        <div class="container">
+        <div class="container mt-2">
             <div class="row gx-3 gy-3">
             <article class="col-4">
                 <div class="red-box box">300 x 200</div>
