--- a/05_javascript/DOM/task3/index.html
+++ b/05_javascript/DOM/task3/index.html
@@ -1,16 +1,25 @@
+<!--Access/Update Text Node
+Create an unordered list containing <li> items that represent navigation.
+Create a function that takes text from one of the <li> elements and presents it on
+screen using alert.
+
+Create one more function.
+The function should take some text as an argument.
+The function should select the last <li> element in the list and replace its text with
+text passed as the function argument.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/main.css">
     <title>Access/Update Text Node</title>
 </head>
 <body>
     <ul>
         <li>Pocetna</li>
-        <li><a href="www.google.com">O Nama</a></li>
+        <li>O Nama</li>
         <li>Kontakt</li>
     </ul>
 
