--- a/05_javascript/DOM_events/task1/index.html
+++ b/05_javascript/DOM_events/task1/index.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css/main.css">
-    <title>Event Handlers from HTML - basic!</title>
+    <title>Event Handlers from HTML - basic & advance!</title>
 </head>
 <body>
+    <div class="container">
+        <button type="button" class="red-button" onclick="change();">Toggle Background</button>
+
+        <button type="button" class="yellow-button" onclick="turnOffColor();">Turn Off</button>
+    </div>
     
-    <button type="button" class="red-button" onclick="changeColor();">Toggle Background</button>
-
-    <button type="button" class="yellow-button" onclick="">Turn Off</button>
-    
-
-
-
-
 
     <script src="index.js"></script>
 </body>
