--- a/05_javascript/DOM_events/task2/index.html
+++ b/05_javascript/DOM_events/task2/index.html
@@ -12,10 +12,11 @@
     <div class="container">
         <div class="chat-container"></div>
 
-        <form action="#" method="post">
+        <div class="form">
         <input type="text" class="input-text">
         <button type="submit" class="submit-button">Send</button>
-        </form>
+        </div>
+
 
 
     </div>
