JSON exercise with dog API finished

--- a/05_javascript/05_ajax&JSON/task2/index.html
+++ b/05_javascript/05_ajax&JSON/task2/index.html
@@ -25,8 +25,12 @@ new picture is added to the page.
     <div class="main-container">
         <form action="">
             <label for="submit"></label>
-            <input type="button" value="Submit your photo" id="submit">
+            <input type="button" value="Woof, woof!" id="submit">
         </form>
+
+        <a href="https://dog.ceo/dog-api/" target="_blank"><img src="" alt="" class="img-paragraph"></a>
+
+        <p class="dog"></p>
     </div>
     
 
