--- a/06_finalWebProject/index.html
+++ b/06_finalWebProject/index.html
@@ -9,10 +9,10 @@
     <title>BitShow</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-light bg-light">
+    <header class="bg-dark">
+        <nav class="navbar navbar-light bg-dark">
             <div class="container-fluid">
-            <a class="navbar-brand">BitShow</a>
+            <a class="navbar-brand text-light">BitShow</a>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             </form>
@@ -20,8 +20,13 @@
         </nav>
     </header>
 
+
+    
     <main>
         <h2>Popular Shows</h2>
+        <div class="main-div">
+
+        </div>
 
     </main>
 
