Search input field logic/Sass changes

--- a/06_finalWebProject/index.html
+++ b/06_finalWebProject/index.html
@@ -9,17 +9,21 @@
     <title>BitShow</title>
 </head>
 <body>
-    <header class="bg-dark">
-        <nav class="navbar navbar-light bg-dark">
-            <div class="container-fluid">
-            <a class="navbar-brand text-light">BitShow</a>
-                    <form class="d-flex" autocomplete="off">
-                        <div class="autocomplete">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
+    <header>
+        <nav>
+            <div>
+                <h1>BitShow</h1>
             </div>
-        </nav>
+            <div class="wrapper">
+                <div class="search-input">
+                <a href="" target="_blank" hidden></a>
+                <input type="text" placeholder="Type to search..">
+                <div class="autocom-box">
+                    <!-- here list are inserted from javascript -->
+                </div>
+                </div>
+            </div>
+         </nav>
     </header>
 
 
