--- a/06_finalWebProject/tv-show.html
+++ b/06_finalWebProject/tv-show.html
@@ -9,21 +9,26 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="bg-dark">
-        <nav class="navbar navbar-light bg-dark">
-            <div class="container-fluid">
-            <a class="navbar-brand text-light" href="index.html">BitShow</a>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
+    <header>
+        <nav>
+            <div>
+                <h1>BitShow</h1>
             </div>
-        </nav>
+            <div class="wrapper">
+                <div class="search-input">
+                <a href="" target="_blank" hidden></a>
+                <input type="text" placeholder="Type to search..">
+                <div class="autocom-box">
+                </div>
+                </div>
+            </div>
+         </nav>
     </header>
 
 
 
     <main>
-        <h1></h1>
+        <h2></h2>
 
         <div class="main-flex">
             <div class="imageDiv">
@@ -59,5 +64,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="second.js"></script>
+    <script src="searchLogic.js"></script>
 </body>
 </html>
